# emu

./: .gitignore  .npmrc  .tool-versions  AGENTS.md  ARROW_KEY_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  benchmark_arrow_keys.sh  coverage_action_plan.md  coverage_improvement_plan.md  coverage_summary.md  duplicate_functions_analysis.md  first.md  lefthook.yml  package.json  test_build.sh.bak  test_form.rs.bak  test_physical_devices.rs  test_regex.py
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test-coverage.yml
.lefthook/commit-msg/: prevent_wip.sh
benches/: performance.rs  startup_benchmark.rs
docs/: API.md  ARCHITECTURE.md  DEBUG_AVD_CREATION.md  DEVELOPMENT.md  PEFORMANCE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS.md  README.md  RELEASING.md  SESSION_HANDOFF.md  TESTABILITY_REFACTORING_PLAN.md  TESTING.md  TEST_COVERAGE_60_PERCENT_PLAN.md  TEST_IMPLEMENTATION_RESULTS.md  TEST_REFACTORING.md  development_plan.md  hang_over.md  refactoring-plan-2026-04-11.md
docs/testing/: test-addition-guidelines.md  test-categories.md  test-execution-guide.md
examples/: check_physical_devices.rs  config.toml
src/: config.rs  constants.rs  lib.rs  main.rs
src/app/: actions.rs  api_levels.rs  background.rs  constants.rs  create_device.rs  create_device_form.rs  details.rs  device_actions.rs  event_debug.rs  event_processing.rs  events.rs  input.rs  logs.rs  mod.rs  refresh.rs  state.rs  test_helpers.rs  tests.rs
src/constants/: android.rs  colors.rs  commands.rs  defaults.rs  env_vars.rs  errors.rs  files.rs  ios.rs  ios_devices.rs  keywords.rs  limits.rs  messages.rs  mod.rs  numeric.rs  patterns.rs  performance.rs  priorities.rs  progress.rs  resolutions.rs  timeouts.rs  ui_layout.rs  ui_text.rs
src/managers/: android.rs  common.rs  ios.rs  mock.rs  mod.rs
src/models/: api_level.rs  cache.rs  details.rs  device.rs  device_config.rs  device_info.rs  error.rs  mod.rs  platform.rs  sdk.rs
src/ui/: dialogs.rs  mock_backend.rs  mod.rs  panels.rs  render.rs  theme.rs  widgets.rs
src/utils/: cache.rs  cache_manager.rs  command.rs  command_executor.rs  logger.rs  mod.rs  validation.rs
tests/: README.md  README_IMPROVEMENT_SUGGESTIONS.md  additional_functionality_test.rs  advanced_security_test.rs  android_error_handling_comprehensive_test.rs  android_manager_fixture_test.rs  android_manager_test.rs  android_parsing_comprehensive_test.rs  api_level_install_test.rs  app_event_integration_test.rs  app_integration_fixture_test.rs  app_integration_realistic_test.rs  app_main_logic_test.rs  app_mod_advanced_test.rs  app_mod_comprehensive_test.rs  app_mod_execution_test.rs  app_mod_minimal_test.rs  app_state_basic_test.rs  app_state_concurrency_complete_test.rs  app_state_execution_test.rs  app_state_test.rs  app_test.rs  architecture_detection_test.rs  arrow_key_performance_test.rs  background_cache_test.rs  cache_performance_test.rs  circular_navigation_test.rs  command_security_test.rs  comprehensive_integration_mock_test.rs  comprehensive_integration_test.rs  constants_comprehensive_test.rs  constants_documentation_test.rs  constants_patterns_coverage_test.rs  constants_simple_coverage_test.rs  constants_usage_coverage_test.rs  debug_android.rs  debug_ios_test.rs  debug_mock_backend_test.rs  debug_ui_render_test.rs  device_creation_navigation_test.rs  (+65 more)
tests/backup/: api_level_management_test.rs
tests/common/: assertions.rs  helpers.rs  mod.rs
tests/fixtures/: README.md  android_manager_fixture_test.rs  android_outputs.json  command_utility_fixture_test.rs  device_fixtures.rs  mod.rs  (+6 more)
(+122 files in other folders)
