[package]
name = "emu"
version = "0.1.0"
edition = "2021"
authors = ["Daichi Furiya"]
description = "A terminal user interface for managing Android emulators and iOS simulators with a lazygit-inspired design"
readme = "README.md"
repository = "https://github.com/wasabeef/emu"
license = "MIT OR Apache-2.0"
keywords = ["android", "ios", "emulator", "simulator", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.45", features = ["full"] }

# CLI Parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"
color-eyre = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"

# Utility
dirs = "6.0"
which = "7.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
mockall = "0.13"
criterion = "0.5"

[[bin]]
name = "debug-avd"
path = "src/bin/debug_avd.rs"

[[bench]]
name = "performance"
harness = false

# Development profile optimizations for faster builds
[profile.dev]
# Faster incremental builds
opt-level = 0
# Use multiple codegen units for parallel compilation
codegen-units = 256
# Split debuginfo for faster linking
split-debuginfo = "unpacked"

# Profile for faster development with some optimizations
[profile.dev-opt]
inherits = "dev"
# Some optimization for better runtime performance
opt-level = 1

[profile.release]
# Single codegen unit for better optimizations
codegen-units = 1
# Enable link-time optimization for smaller and faster binaries
lto = true
# Maximum optimization level
opt-level = 3
# Strip debug symbols for smaller binary
strip = true
# Enable overflow checks in release mode for safety
overflow-checks = true

# Additional profile for maximum performance (use with: cargo build --profile perf-release)
[profile.perf-release]
inherits = "release"
# Use thin LTO for faster builds while still getting most LTO benefits
lto = "thin"
# Enable CPU-specific optimizations
codegen-units = 1
# Even more aggressive optimizations
opt-level = 3
# Panic immediately without unwinding for smaller binary
panic = "abort"
